# try

./: CMakeLists.txt  compile_flags.txt  main.cpp
